# rust-scrcpy

./: .gitignore  Cargo.toml  README.md  flutter_rust_bridge.yaml
examples/: test_full_pipeline.rs
scripts/: build_rust_flutter_bridge.ps1
src/: flutter_callback_register.rs  frb_generated.rs  lib.rs  rust_scrcpy_api.rs
src/adb/: client.rs  device.rs  mod.rs
src/config/: config.rs
src/decoder/: backend.rs  ffmpeg_decoder.rs  mod.rs  pipeline.rs
src/decoder/gpu_direct_output/: context.rs  mod.rs  texture_uploader.rs
src/gh_api/: flutter_api.rs  mod.rs
src/gh_common/: error.rs  event.rs  mod.rs  model.rs  port.rs
src/rust_scrcpy_api/: flutter_callback_register.rs  model.rs  runtime.rs  service.rs
src/scrcpy/: control.rs  framed_video.rs  mod.rs  scrcpy_service.rs  scrcpy_service.rs.bak  server.rs
src/scrcpy/client/: mod.rs  scrcpy_client.rs  scrcpy_conn.rs  scrcpy_control.rs  scrcpy_video_stream.rs
src/scrcpy/config/: mod.rs  scrcpy_client_config.rs
src/scrcpy/decode_core/: backend.rs  decode_pipeline.rs  ffmpeg_decoder.rs  mod.rs
src/scrcpy/input/: inject_input_client.rs  input_client.rs  input_mode.rs  mod.rs  uhid_input_client.rs  uhid_keyboard_state.rs
src/scrcpy/runtime/: mod.rs  scrcpy_core_runtime.rs  (+1 more)
src/session/: device_cache.rs  encoding_profile.rs  manager.rs  mod.rs
src/utils/: mod.rs  port.rs
src/yolo/: mod.rs
tests/: framed_video_tests.rs  pipeline_h264_merger_tests.rs  port_tests.rs  scrcpy_geometry_tests.rs  texture_uploader_tests.rs  video_annexb_tests.rs
tests/support/: geometry.rs  renderer.rs  window_helper.rs
(+18 files in other folders)
