[package]
name = "rust-scrcpy"
version = "2.2.0"
edition = "2021"
authors = ["zzzzyg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
# Flutter 通过 FFI 加载动态库，必须输出 cdylib。
# 同时保留 rlib，便于本工程内部测试与复用。
name = "rust_scrcpy"
crate-type = ["cdylib", "rlib"]

[features]
default = []
d3d11 = []
frb = []

[dependencies]
# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# FFmpeg 解码（用于 test_full_pipeline 回归示例）
ffmpeg-next = "8"
once_cell = "1.20"
flutter_rust_bridge = "=2.11.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }
